tests/corpus/source_to_intent_parser/accepted/accepted_matmul_elementwise.tucsrc
@triton.jit
def matmul_elementwise(a, b, y):
    projection = tl.dot(a, b)
    activated = tl.where(projection > 0.0, projection, 0.0)
    tl.store(y, activated)
