tests/corpus/source_to_intent_parser/rejected/reject_decorator_call.tucsrc
@triton.jit(num_warps=4)
def decorator_call(x, y):
    tl.store(y, x)
